src/charts/_column.scss
.charts-css {

  &.column {
    display: block;
    width: 100%;
    height: 100%;

    colgroup,
    thead,
    tfoot {
      display: none;
    }

    // Layout
    tbody {
      display: flex;
      justify-content: space-between;
      align-items: stretch;

      width: 100%;
      height: calc(100% - var(--heading-size));

      tr {
        position: relative;

        // Even row size
        flex-grow: 1;
        flex-shrink: 1;
        flex-basis: 0;
        overflow-wrap: anywhere;

        // Display cells in a row
        display: flex;
        justify-content: flex-start;

        th {
          position: absolute;
          right: 0;
          left: 0;
        }

        td {
          display: flex;
          justify-content: center;

          width: 100%;
          height: calc(100% * var(--size, 1));

          position: relative; // For tooltips
        }

      }
    }

    // Labels
    &:not(.show-labels) {
      --labels-size: 0;

      tbody tr th {
        display: none;
      }
    }
    &.show-labels {
      --labels-size: 1.5rem;

      tbody tr th {
        display: flex;
        align-items: center;
      }
    }
    &.labels-align-start {
      tbody tr th {
        justify-content: var(--labels-align, flex-start);
      }
    }
    &.labels-align-end {
      tbody tr th {
        justify-content: var(--labels-align, flex-end);
      }
    }
    &.labels-align-center {
      tbody tr th {
        justify-content: var(--labels-align, center);
      }
    }

    // Chart Direction
    &:not(.reverse) {
      tbody {
        tr {
          align-items: flex-end;
          margin-block-end: var(--labels-size);

          th {
            bottom: calc(-1 * var(--labels-size) - var(--primary-axis-width));
            height: var(--labels-size);
            justify-content: var(--labels-align, center);
          }

          td {
            align-items: flex-start;
          }
        }
      }
    }
    &.reverse {
      tbody {
        tr {
          align-items: flex-start;
          margin-block-start: var(--labels-size);

          th {
            top: calc(-1 * var(--labels-size) - var(--primary-axis-width));
            height: var(--labels-size);
            justify-content: var(--labels-align, center);
          }

          td {
            align-items: flex-end;
          }
        }
      }
    }

    // Stacked
    &:not(.stacked) {
      tbody tr {
        td {
          // Even cell size
          flex-grow: 1;
          flex-shrink: 1;
          flex-basis: 0;
        }
      }
    }
    &.stacked {
      tbody tr {
        td {
          flex-grow: unset;
          flex-shrink: unset;
          flex-basis: unset;
        }
      }

      &.reverse-datasets {
        tbody tr {
          justify-content: flex-end;
        }
      }
    }

    // Reverse Order
    &:not(.reverse-data) {
      tbody {
        flex-direction: row;
      }
    }
    &.reverse-data {
      tbody {
        flex-direction: row-reverse;
      }
    }
    &:not(.reverse-datasets) {
      &:not(.stacked) {
        tbody tr {
          flex-direction: row;
        }
      }

      &.stacked {
        &:not(.reverse) {
          tbody tr {
            flex-direction: column-reverse;
          }
        }

        &.reverse {
          tbody tr {
            flex-direction: column;
          }
        }
      }
    }
    &.reverse-datasets {
      &:not(.stacked) {
        tbody tr {
          flex-direction: row-reverse;
        }
      }

      &.stacked {
        &:not(.reverse) {
          tbody tr {
            flex-direction: column;
          }
        }

        &.reverse {
          tbody tr {
            flex-direction: column-reverse;
          }
        }
      }
    }

    // Spacing
    @for $i from 1 through 20 {
      &.data-spacing-#{$i} {
        tbody tr {
          padding-inline-start: $i * 1px;
          padding-inline-end: $i * 1px;
        }
      }
    }
    @for $i from 1 through 20 {
      &.datasets-spacing-#{$i} {
        tbody tr td {
          margin-inline-start: $i * 1px;
          margin-inline-end: $i * 1px;
        }
      }
    }

    // Axes
    &.show-primary-axis {
      &:not(.reverse) {
        tbody tr {
          border-block-end: var(--primary-axis-width) var(--primary-axis-style) var(--primary-axis-color);
        }
      }
      &.reverse {
        tbody tr {
          border-block-start: var(--primary-axis-width) var(--primary-axis-style) var(--primary-axis-color);
        }
      }
    }
    @for $i from 1 through $max-axes {
      &.show-#{$i}-secondary-axes {
        &:not(.reverse) {
          tbody tr {
            background-size: 100% (100% / $i);
            background-image: linear-gradient(var(--secondary-axes-color) var(--secondary-axes-width), transparent var(--secondary-axes-width));
          }
        }
        &.reverse {
          tbody tr {
            background-size: 100% (100% / $i);
            background-image: linear-gradient(0deg, var(--secondary-axes-color) var(--secondary-axes-width), transparent var(--secondary-axes-width));
          }
        }
      }
    }
    &.show-data-axes {
      tbody tr {
        border-inline-end: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
      }
      &:not(.reverse-data) {
        tbody tr:first-of-type {
          border-inline-start: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
        }
      }
      &.reverse-data {
        tbody tr:last-of-type {
          border-inline-start: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
        }
      }
    }
    &.show-dataset-axes { // TODO: fix this
      tbody tr td {
        border-inline-end: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
      }
      &:not(.reverse-data) {
        tbody tr:first-of-type td {
          border-inline-start: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
        }
      }
      &.reverse-data {
        tbody tr:last-of-type td {
          border-inline-start: var(--data-axes-width) var(--data-axes-style) var(--data-axes-color);
        }
      }
    }

    // Hover
    &.hover {
      tr:hover {
        background-color: var(--tr-hover-color, rgba(0, 0, 0, .05));
      }
      td:hover {
        opacity: .75;
      }
    }

  }

}

